# gsoaponvif-androidTest

./: CMakeLists.txt  CMakeLists.txt.ANDROID  OnvifControl.h  build.sh  main.cpp  onvifdevice.cpp  onvifdevice.h
3rdlib/arm64-v8a/openssl/: libcrypto.so.1.1  libssl.so.1.1
3rdlib/armeabi-v7a/openssl/: libcrypto.so.1.1  libssl.so.1.1
app/: build.gradle
app/src/androidTest/java/com/example/gsoaponvif/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  onvifdevice.cpp  onvifdevice.h  soapPrint.cpp
app/src/main/cpp/gsoap-onvif/plugin/: stdsoap2.cpp  stdsoap2.h  wsseapi.cpp
app/src/test/java/com/example/gsoaponvif/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
gsoap-onvif/: OnvifPTZ.cpp
gsoap-onvif/source/include/: soapImagingBindingProxy.h
gsoap-onvif/source/src/: soapImagingBindingProxy.cpp
gsoaponvif/: settings.gradle
gsoaponvif/app/: build.gradle
gsoaponvif/app/src/main/: AndroidManifest.xml
gsoaponvif/app/src/main/cpp/: CMakeLists.txt  main.cpp  native-lib.cpp  onvifdevice.cpp  onvifdevice.h  soapPrint.h
gsoaponvif/app/src/main/cpp/gsoap-onvif/plugin/: mecevp.h  stdsoap2.cpp  stdsoap2.h  wsseapi.cpp
gsoaponvif/app/src/main/cpp/gsoap-onvif/sslcpp/: by_file.c  x509_lu.c  x509_vfy.c
gsoaponvif/app/src/main/java/com/example/gsoaponvif/: MainActivity.java
gsoaponvif/app/src/main/res/values/: strings.xml
proxy/: main.cpp  onvifcomm.cpp  onvifcomm.h  onvifdevice.cpp  onvifdevice.h
